--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>JS Redux</title>
 </head>
 <body>
-    <p>Counter Exampler</p>
+    <p>Counter Example</p>
     <p><strong>Counter: </strong><span id="counter">0</span> </p>
     <button id="increment">Increment</button>
     <button id="decrement">Decrement</button>
